--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+body{
+  background-color: antiquewhite;
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(110,9,121,1) 0%, rgba(55,72,191,1) 39%, rgba(48,123,196,1) 68%, rgba(41,112,126,1) 100%);
+}
+
 .App {
+  width: 60%;
+  margin: 5% auto;
+}
+
+h1{
+  font-weight: bold;
+  font-size: 2.5em;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-part, .edit-part{
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgba(255, 255, 255, 0.598);
+  padding: 2%;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+}
+input, button{
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  opacity: 0.9;
+  font-weight: 500;
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  cursor: pointer;
+}
+.todos{
+  font-size: 1.2rem;
+  background-color: rgba(255, 255, 255, 0.598);
+  padding: 2%;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.todo-list{
+  text-transform: capitalize;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+li:first-child{
+  margin-top: 3%;
+  font-size: 1.3rem;
+}
+
+li:last-child{
+  width: 40%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+.add-btn{
+  background-color: aquamarine;
+  transition: all 0.2s ease-in-out;
+}
+
+.add-btn:hover{
+  background-color: rgb(66, 189, 148);
+  transform: scale(1.1);
+}
+
+.edit-btn{
+  background-color: rgb(199, 247, 127);
+  transition: all 0.2s ease-in-out;
+}
+
+.edit-btn:hover{
+  background-color: rgb(114, 172, 27);
+  transform: scale(1.1);
+}
+
+.delete-btn{
+  background-color: rgb(254, 147, 147);
+  transition: all 0.2s ease-in-out;
+}
+
+.delete-btn:hover{
+  background-color: rgb(151, 62, 62);
+  transform: scale(1.1);
+}
+
+
+.save-btn{
+  background-color:  rgb(166, 65, 177);
+  transition: all 0.2s ease-in-out;
+}
+
+.save-btn:hover{
+  background-color:  rgba(110,9,121,1);
+  transform: scale(1.1);
 }
